--- a/buscador.html
+++ b/buscador.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <style>
     body {
         margin: 0;
         background-color: #AB88FF;
+        font-family: 'Muli', sans-serif;
     }
     .header {
         width: 100%;
         height: 80px;
         background-color: #AB88FF;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .header__img {
@@ -26,7 +31,7 @@
         margin-right: 30px;
     }
     .header__menu ul { 
-        /* display: none; */
+        display: none;
         list-style: none;
         padding: 0px;
         position: absolute;
@@ -34,9 +39,33 @@
         text-align: right;
         margin: 0px 0px 0px -14px;
     }
+    .header__menu:hover ul, ul:hover { 
+        display: block;
+    }
+    .header__menu li {
+        margin: 10px 10px;
+    }
+    .header__menu li a {
+        color: white;
+        text-decoration: none;
+    }
+    .header__menu li a:hover {
+        text-decoration: underline;
+    }
     .header__menu--profile {
         margin-right: 8px;
+        /* width: 40px; */
+        display: flex;
+        align-items: center;
+
+    }
+    .header__menu--profile img {
+        margin-right: 8px;
         width: 40px;
+    }
+    .header__menu--profile p {
+        margin: 0px;
+        color: white;
     }
 </style>
 <body>
